# AegisInsuranceProtocol

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-loc.sh  ci.sh  tests.sh
src/: AegisInsuranceProtocol.vy
src/aegis_protocol/: __init__.py  claims.py  constants.py  ledger.py  models.py  pricing.py  reporting.py  scenarios.py
tests/: conftest.py  test_offchain_support.py  test_policy_lifecycle.py
